run headless tests without a server

--- a/test/index.html
+++ b/test/index.html
@@ -6,6 +6,9 @@
 </head>
 <body>
   <div id="mocha"></div>
+  <script>
+    var module = {};
+  </script>
   <script src="../dist/rsvp-2.0.0.js"></script>
   <script src="vendor/assert.js"></script>
   <script src="vendor/mocha.js"></script>
