--- a/test/index.html
+++ b/test/index.html
@@ -6,15 +6,12 @@
 </head>
 <body>
   <div id="mocha"></div>
-  <script>
-    var module = {};
-  </script>
   <script src="../dist/rsvp-2.0.0.js"></script>
   <script src="vendor/assert.js"></script>
   <script src="vendor/mocha.js"></script>
   <script>mocha.setup({ ui: 'bdd', timeout: 200 })</script>
-  <script src="test-adapter.js"></script>
-  <script src="../tmp/all-tests.js"></script>
+  <script src="../tmp/tests-bundle.js"></script>
+  <script src="tests/extension_test.js"></script>
   <script>
     if (window.mochaPhantomJS) { mochaPhantomJS.run(); }
     else { mocha.run(); }
